--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+        <title>The Instagram Feed con Bootstrap</title>
+        <link href="estilo.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
         <div class="contents">
