se comentaron codigos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Instagram
                 </a>
             </nav>
-            <div class="posts">
+            <!--<div class="posts">
                 <ul>
                     <li>
                         <div class="photo-header">
@@ -73,7 +73,7 @@
                         </div>
                     </li>
                 <ul>
-            </div>
+            </div>-->
         </div>
 
     </body>
