se comento codigosss

--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
         <link href="estilo.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
-        <div class="contents">
-            <!-- Image and text -->
+        <!--<div class="contents">
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="#">
                 <img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
                 Instagram
                 </a>
             </nav>
-            <!--<div class="posts">
+            <div class="posts">
                 <ul>
                     <li>
                         <div class="photo-header">
@@ -73,8 +72,8 @@
                         </div>
                     </li>
                 <ul>
-            </div>-->
-        </div>
+            </div>
+        </div>-->
 
     </body>
 </html>
