--- a/index.html
+++ b/index.html
@@ -12,12 +12,32 @@
         <script src="https://kit.fontawesome.com/012f386f3d.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar bg-light">
+        <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <i class="fa-brands fa-instagram"></i>
-                Bootstrap
+                Instagram
               </a>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <form class="d-flex">
+                        <button class="btn btn-success" type="button">Create a new post</button>
+                      </form>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fa-solid fa-gear"></i>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Log Out</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+          
             </div>
           </nav>
         <!--<div class="contents">
