--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <form class="d-flex">
-                        <button class="btn btn-success" type="button">Create a new post</button>
+                        <button class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Create a new post</button>
                       </form>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,6 +40,26 @@
           
             </div>
           </nav>
+
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <form>
+                    <div class="mb-3">
+                      <textarea class="form-control" id="message-text"></textarea>
+                    </div>
+                  </form>
+                  <i class="fa-solid fa-camera"></i>
+                  <i class="fa-solid fa-location-dot"></i>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                  <button type="button" class="btn btn-success">Publish</button>
+                </div>
+              </div>
+            </div>
+          </div>
         <!--<div class="contents">
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="#">
