--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
                   </li>
                 </ul>
               </div>
-              <div class="puntos">
-                <i class="fa-solid fa-grid-4"></i>
-              </div>
             </div>
           </nav>
-         
+          <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="col-md-auto">
+                    <i class="fa-solid fa-grip"></i>
+                  </div>              
+            </div>
+          </div>
 
           <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
