ajuste al codigo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <ul>
                     <li>
                         <div class="photo-header">
-                            <div class="palabras">
+                            <div class="palabras text-nowrap">
                                 <strong>My firts Photo</strong> 
                             </div>
                             <div class="numeros">
@@ -68,7 +68,7 @@
                     </li>
                     <li>
                         <div class="photo-header">
-                            <div class="palabras">
+                            <div class="palabras text-nowrap">
                                 <strong>Some cute thing</strong> 
                             </div>
                             <div class="numeros">
@@ -86,7 +86,7 @@
                     </li>
                     <li>
                         <div class="photo-header">
-                            <div class="palabras">
+                            <div class="palabras text-nowrap">
                                 <strong>And of course... food!</strong> 
                             </div>
                             <div class="numeros">
