--- a/index.html
+++ b/index.html
@@ -45,64 +45,66 @@
                     <i class="fa-solid fa-grip"></i>
                   </div>              
             </div>
-            <div class="posts">
-                <!--<ul>
-                    <li>
-                        <div class="photo-header">
-                            <div class="palabras text-nowrap">
-                                <strong>My firts Photo</strong> 
+            <div class="contents">
+                <div class="posts">
+                    <ul>
+                        <li>
+                            <div class="photo-header">
+                                <div class="palabras text-nowrap">
+                                    <strong>My firts Photo</strong> 
+                                </div>
+                                <div class="numeros">
+                                    12/14
+                                </div>
                             </div>
-                            <div class="numeros">
-                                12/14
+                            <div class="photo-body">
+                                <img src="perrito.png" width="100%" height="300px">
                             </div>
-                        </div>
-                        <div class="photo-body">
-                            <img src="perrito.png" width="100%" height="300px">
-                        </div>
-                        <div class="photo-footer">
-                            <p>
-                                This is my first photo of the feed. this is a multi line comment for testing
-                                purposes. I am learning to code with <strong>#BreatheCode</strong>
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="photo-header">
-                            <div class="palabras text-nowrap">
-                                <strong>Some cute thing</strong> 
+                            <div class="photo-footer">
+                                <p>
+                                    This is my first photo of the feed. this is a multi line comment for testing
+                                    purposes. I am learning to code with <strong>#BreatheCode</strong>
+                                </p>
                             </div>
-                            <div class="numeros">
-                                12/17
+                        </li>
+                        <li>
+                            <div class="photo-header">
+                                <div class="palabras text-nowrap">
+                                    <strong>Some cute thing</strong> 
+                                </div>
+                                <div class="numeros">
+                                    12/17
+                                </div>
                             </div>
-                        </div>
-                        <div class="photo-body">
-                            <img src="perro_patineta.png" width="100%" height="300px">
-                        </div>
-                        <div class="photo-footer">
-                            <p>
-                                The internet approves this cute dog...<strong>#BreatheCode</strong>
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="photo-header">
-                            <div class="palabras text-nowrap">
-                                <strong>And of course... food!</strong> 
+                            <div class="photo-body">
+                                <img src="perro_patineta.png" width="100%" height="300px">
                             </div>
-                            <div class="numeros">
-                                12/17
+                            <div class="photo-footer">
+                                <p>
+                                    The internet approves this cute dog...<strong>#BreatheCode</strong>
+                                </p>
                             </div>
-                        </div>
-                        <div class="photo-body">
-                            <img src="pasta.png" width="100%" height="300px">
-                        </div>
-                        <div class="photo-footer">
-                            <p>
-                                Because no photo feed is cool whithout some food on it! <strong>#BreatheCode</strong>
-                            </p>
-                        </div>
-                    </li>
-                <ul>-->
+                        </li>
+                        <li>
+                            <div class="photo-header">
+                                <div class="palabras text-nowrap">
+                                    <strong>And of course... food!</strong> 
+                                </div>
+                                <div class="numeros">
+                                    12/17
+                                </div>
+                            </div>
+                            <div class="photo-body">
+                                <img src="pasta.png" width="100%" height="300px">
+                            </div>
+                            <div class="photo-footer">
+                                <p>
+                                    Because no photo feed is cool whithout some food on it! <strong>#BreatheCode</strong>
+                                </p>
+                            </div>
+                        </li>
+                    <ul>
+                </div>
             </div>
           </div>
 
