modified:   estilo.css

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <div class="palabras text-nowrap">
                                     <strong>Some cute thing</strong> 
                                 </div>
-                                <div class="numeros">
+                                <div class="numeros-dos">
                                     12/17
                                 </div>
                             </div>
@@ -90,7 +90,7 @@
                                 <div class="palabras text-nowrap">
                                     <strong>And of course... food!</strong> 
                                 </div>
-                                <div class="numeros">
+                                <div class="numeros-tres">
                                     12/17
                                 </div>
                             </div>
